portfolio text and button

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,16 @@
   <link rel="stylesheet" href="style2.css">
   <link rel="stylesheet" href="bio.css">
   <link rel="stylesheet" href="retrotext.css">
+  <link rel="stylesheet" href="button.css">
   <link rel="stylesheet" href="portfolio.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
   <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js"></script>
 </head>
 
 	<body>
-  <img src="assets/123 (1).png" class = "background"/>
+<img src="assets/123 (1).png" class = "background"/>
   <div class="some-box">
       <h1>Tummy Rub Portfolio!</h1>
   <div class="grid-container">
@@ -26,8 +28,11 @@
             <div id="print">
             </div>
           </div>
-      </div>   
-  </div>
+      </div> 
+    <p class= "grid-item text">Lime of Decision<br><span class = "band">Lemon of Choice</span></p>
+    <div>
+      <a href="https://open.spotify.com/album/3xTnmaPFaQVGhUYa79JiKM?si=XkyFL8T-RU2Os2jE0HgcrQ" class="button grid-item">Listen on Spotify</a></div>
+    </div>
   <div class="grid-item">
     <div id="album2">
       <div id="cover2">
@@ -39,6 +44,9 @@
           </div>
         </div>
     </div>
+    <p class= "grid-item text">Ah<br><span class = "band">Joetaurone</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">
     <div id="album3">
@@ -51,6 +59,9 @@
           </div>
         </div>
     </div>
+    <p class= "grid-item text">Toilet Paper<br><span class = "band">Joetaurone</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
   </div>  
   <div class="grid-item">
     <div id="album4">
@@ -63,6 +74,9 @@
           </div>
         </div>
     </div>
+    <p class= "grid-item text">Loose Ends<br><span class = "band">Cheesy Snacks</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">    
     <div id="album5">
@@ -75,6 +89,9 @@
           </div>
         </div>
     </div>
+    <p class= "grid-item text">Half Asleep<br><span class = "band">Toriendofstory</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">
     <div id="album6">
@@ -87,10 +104,70 @@
           </div>
         </div>
     </div>
+    <p class= "grid-item text">Danjoe<br><span class = "band">Danjoe</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
   </div>  
-  <div class="grid-item">7</div>
-  <div class="grid-item">8</div>
-  <div class="grid-item">9</div>  
+  <div class="grid-item">
+    <div id="album7">
+      <div id="cover7">
+        <div id="print7">
+        </div>
+      </div>
+        <div id="vinyl7">
+          <div id="print7">
+          </div>
+        </div>
+    </div>
+    <p class= "grid-item text">Honesty Hour<br><span class = "band">L i l y </span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+  </div>
+  <div class="grid-item">
+    <div id="album8">
+      <div id="cover8">
+        <div id="print8">
+        </div>
+      </div>
+        <div id="vinyl8">
+          <div id="print8">
+          </div>
+        </div>
+    </div>
+    <p class= "grid-item text">Danjoe 2 Flamin' Hot<br><span class = "band">Danjoe</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+  </div>
+  <div class="grid-item">
+    <div id="album9">
+      <div id="cover9">
+        <div id="print9">
+        </div>
+      </div>
+        <div id="vinyl9">
+          <div id="print9">
+          </div>
+        </div>
+    </div>
+    <p class= "grid-item text">Not Enough<br><span class = "band">Mark Manning</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+  </div>  
+      <div class="grid-item">
+    <div id="album10">
+      <div id="cover10">
+        <div id="print10">
+        </div>
+      </div>
+        <div id="vinyl10">
+          <div id="print10">
+          </div>
+        </div>
+    </div>
+    <p class= "grid-item text">What Country Is<br><span class = "band">Sara Pierson</span></p>
+    <div>
+      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+  </div> 
 </div>
   </div>
 </body>
