--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html>
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNGK1NZ3PV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZNGK1NZ3PV');
+</script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="retrotext.css">
 
