final before making dans changes

--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,14 @@
       </div>
     <div class="right-container">
       <div class="right-inner-container">
-        <form action="#">
+        <form action="https://formsubmit.co/tummyrubrecords@gmail.com" method="POST">
 			<h2 class="lg-view">Contact</h2>
       <h2 class="sm-view">Let's Chat</h2>
            <p class = "explain">Shoot us an email! Let us know who you are and what you want to record</p>
-          <input type="text" placeholder="Name *"  required/>
-      <input type="email" placeholder="Email *" required />
-			<input type="phone" placeholder="Phone" />
-          <textarea rows="4" placeholder="Message *" required></textarea>
+          <input type="text" placeholder="Name *" name = "Name" required/>
+      <input type="email" placeholder="Email *" name = "email" required />
+			<input type="phone" placeholder="Phone" name = "phone"/>
+          <textarea rows="4" placeholder="Message *" name = "message" required></textarea>
 			<button>Submit</button>
 		</form>
       </div>
