--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </a>  
      </li>
    
-<li><a href="/serivces-and-prices-write-up.html"><img src="assets/tape-machine.png" class = "responsive" alt="">
+<li><a href="/pricing.html"><img src="assets/tape-machine.png" class = "responsive" alt="">
   <figcaption class="retro">
   Services <br>& Prices
          </figcaption></a></li>
