--- a/gearlist.html
+++ b/gearlist.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+  <title>Pricing</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZNGK1NZ3PV"></script>
 <script>
@@ -11,308 +13,284 @@
 
   gtag('config', 'G-ZNGK1NZ3PV');
 </script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="retrotext.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="gearlist.css">
+  <link rel="stylesheet" href="retrotext.css">
+  <link rel="stylesheet" href="pricing.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
   <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src = "script.js"></script>
 
 </head>
 
 	<body>
-
-
-<div class="grid-container">
-  <div class="grid-element header">
-    <center><h1>Tummy Rub Records Available Gear</h1></center>
-  </div>
-  <div class="grid-element sidebar">Gear List!
-    <ul>
-      <li onclick="myFunction()">Console</li>
-      <li onclick="myFunction2()">Amps</li>
-      <li onclick="myFunction3()">Tape Mach.</li>
-      <li onclick="myFunction4()">E. Guitars</li>
-      <li onclick="myFunction5()">Bases</li>
-      <li onclick="myFunction6()">Synths</li>
-      <li onclick="myFunction7()">Cabs</li>
-      <li onclick="myFunction8()">Mics</li>
-      <li onclick="myFunction9()">Rack Gear</li>
-    </ul>  
-  </div>
-  <div class="grid-element main-1-col" >
-    <span id="myDIV">
-    <h2><center>Console</center></h2>
-  <ul>
-    <li>Tascam m3700</li>
-    <li>Tascam m208</li>
-  </ul>
-    </span>
+<img src="assets/123 (1).png" class = "background"/>
+  <div class="some-box">
+        <div class="header">
+        </div>
+        <div class="content2">
+            <div class="container">
+                <h1>Gear List!</h1>
+<div class="menu">
+   <a  id="showall">All</a>
+   <a  id="hideall">Hide All</a>
+   <a  class="showSingle" target="1">Tape Machines</a>
+   <a  class="showSingle" target="2">Amps </a>
+   <a  class="showSingle" target="3">Electric Guitars</a>
+   <a  class="showSingle" target="4">Basses</a>
+   <a  class="showSingle" target="5">Other Stuff</a><br><br>
+   <a  class="showSingle" target="2">Synths</a>
+   <a  class="showSingle" target="3">Cabs</a>
+   <a  class="showSingle" target="4">Microphones</a>
+   <a  class="showSingle" target="1">Rack Gear</a>
+   <a  class="showSingle" target="2">Monitors</a>
+   <a  class="showSingle" target="3">Drums</a>
+   <a  class="showSingle" target="4">Cymbals</a>
 </div>
-  <div class="grid-element main" >
-    <span id="myDIV2">
-  <div><h2 style = "max-width: 100%;">Amps</h2></div>
-    <div>
-    <ul>
-      <li>70s Fender Twin Reverb</li>
-      <li>Fender Hot Rod Deluxe 2x10</li>
-      <li>Fender Hot Rod Deville 2x12</li>
-      <li>Music Man 75 watt 2x12 Reverb and Phasor</li>
-      <li>Music Man 75 watt Bass/Guitar head</li> 
-      <li>Sunn Spectrum Bass head (Master Volume Mod)</li>
-      <li>Sunn Stage Lead Head</li> 
-      <li>Sunn Alpha 2x12r</li>
-      <li>70s Peavey Deuce 2x12</li>
-      <li>80s Peavey Deuce 2x12</li>
-      <li>Peavey Bass Mark 4</li>
-      <li>Ovation Guitar Dude 1x12</li>
-      <li>Ovation “the cat” 2x12</li> 
-      <li>Roland Jazz Chorus 120 2x12</li>
-      <li>Roland Jazz Chorus 40 2x10</li>
-      <li>Roland Jazz Chorus 55 2x8</li>
-      <li>Mesa Boogie Studio 22 1x12</li>
-      <li>Mesa Boogie Markii 1x12</li> 
-      <li>Vox AC15 1x12</li>
-      <li>Mark Bass 1x15</li>
-      <li>Randall 1x12 combo</li> 
-      <li>Premier PS-14</li>
-      <li>Ampex a692</li> 
-      <li>Akai M8 Rod C mod</li>
-    </ul>
-   
+<div class = "bubble2">
+  Howdy Y'all! Here is our gear list. We have 2 consoles: Tascam m3700
+and a Tascam m208. our interface is Mackie Firewire Interface 16 I/O (it's great I promise). We also have more pedals than we can count, so they are not listed. Click the buttons above to reveal our other gear!
+</div>
+<section class="cnt">
+   <div id="div1"  class="targetDiv">
+     <h3><center>Tape Machines</center></h3>
+     <nav class="columns flex-columns">
+     <ul>
+<li>Tascam 38 (8 track ½ inch reel)</li>
+<li>Tascam 688 (8 track cassette)</li>
+<li>Tascam 234(4 track cassette)</li>
+  </ul>
+     </nav>
+   </div>
+   <div id="div2" class="targetDiv">
+     <h3><center>Amps</center></h3>
+     <nav class = "columns flex-columns">
+       <ul>
+         <li>70s Fender Twin Reverb</li>
+<li>Fender Hot Rod Deluxe 2x10</li>
+<li>Fender Hot Rod Deville 2x12</li>
+<li>Music Man 75 watt 2x12 Reverb and Phasor</li>
+<li>Music Man 75 watt Bass/Guitar head</li>
+<li>Sunn Spectrum Bass head (Master Volume Mod)</li>
+<li>Sunn Stage Lead Head</li>
+<li>Sunn Alpha 2x12r</li>
+<li>70s Peavey Deuce 2x12</li>
+<li>80s Peavey Deuce 2x12</li>
+<li>Peavey Bass Mark 4</li>
+<li>Ovation Guitar Dude 1x12</li>
+<li>Ovation “the cat” 2x12</li>
+<li>Roland Jazz Chorus 120 2x12</li>
+<li>Roland Jazz Chorus 40 2x10</li>
+<li>Roland Jazz Chorus 55 2x8</li>
+<li>Mesa Boogie Studio 22 1x12</li>
+<li>Mesa Boogie Markii 1x12</li>
+<li>Vox AC15 1x12</li>
+<li>Mark Bass 1x15</li>
+<li>Randall 1x12 combo</li>
+<li>Premier PS-14</li>
+<li>Ampex a692</li>
+<li>Akai M8 Rod C mod</li>
+       </ul>
+     </nav>
+   </div>
+   <div id="div3" class="targetDiv">
+     <h3><center>Electric Guitars</center></h3>
+     <nav class = "columns flex-columns">
+       <ul>
+         <li>Jmascis Squier JazzMaster RGI Aluminum neck</li>
+<li>90s MIK Squier Strat</li>
+<li>Xaviar JazzMaster with Jmascis Neck</li>
+<li>Danelectro dead on 67’</li>
+<li>Epiphone SG</li>
+<li>Italian Royal archtop guitar</li>
+<li>2000s MIJ Fender Jazzmaster</li>
+<li>80s MIJ Fender Telecaster</li>
+<li>80s MIJ Squier Strat</li>
+<li>First Act Volkswagen Guitar (built in distortion)</li>
+<li>Horrible Mosrite copy</li>
+<li>Eastwood Languedoc Copy (phish guitar)</li>
+<li>Backlund Rockerbox (semi hollow)</li>
+<li>Guild Burnside</li>
+<li>Peavey Omniac (tele style)</li>
+<li>MIM Fender Tele</li>
+<li>Fernandes Strat</li>
+<li>Les Paul Studio</li>
+<li>MIM Fender Strat</li>
+<li>PartsCaster Strat</li>
+<li>PartsCaster Offset tele</li>
+<li>MIM Modern Player Strat</li>
+<li>Schecter 8 String</li>
+<li>Danelectro DC</li>
+<li>Squier Jagmaster</li>
+<li>90s Made in India Squier 2</li>
+<li>Glen Burton semi hollow</li>
+<li>Fender Marauder</li>
+       </ul>
+     </nav>
+   </div>
+   <div id="div4" class="targetDiv">
+     <h3><center>Bases</center></h3>
+     <nav class = "columns flex-columns">
+       <ul>
+         <li>Vista Series Squier MusicMaster bass</li>
+<li>1970 USA Fender P Bass</li>
+<li>Danelectro Innuendo (built in chorus)</li>
+<li>Fender Mike Durnt P Bass</li>
+<li>MIM Fender P Bass</li>
+<li>Made in India Squier 2 P Bass (emg pickups)</li>
+<li>MIM Fender Jazz Bass X2</li>
+<li>90s USA Fender Jazz Bass</li>
+<li>1970s Kay Double Bass</li>
+       </ul>
+     </nav></div>
+  <div id="div5" class="targetDiv">
+    <h3><center>Other Stuff</center></h3>
+    <nav class = "columns flex-columns">
+       <ul>
+         <li>Pedal Steel</li>
+<li>Lap Steel</li>
+<li>Squier Baritone Tele</li>
+       </ul>
+     </nav>
     </div>
-    </span>
-</div>
-<div class="grid-element main-1-col">
-  <span id = "myDIV3">
-  <h2><center>Tape Machines</center></h2>
-  <ul>
-    <li>Tascam 38 (8 track ½ inch reel)</li>
-    <li>Tascam 688 (8 track cassette)</li>    
-    <li>Tascam 234(4 track cassette)</li>
-  </ul>
-  </span>
-</div>
-<div class="grid-element main" >
-  <span id="myDIV4">
-  <h2><center>Electric Guitars</center></h2>
-  <ul>
-    <li>Xaviar JazzMaster with Jmascis Neck</li>
-    <li>Danelectro dead on 67’</li>
-    <li>Epiphone SG</li>
-    <li>Italian Royal archtop guitar</li> 
-    <li>2000s MIJ Fender Jazzmaster</li> 
-    <li>80s MIJ Fender Telecaster</li> 
-    <li>80s MIJ Squier Strat</li> 
-    <li>First Act Volkswagen Guitar (built in distortion)</li>
-    <li>Horrible Mosrite copy</li>
-    <li>Eastwood Languedoc Copy (phish guitar)</li>
-    <li>Backlund Rockerbox (semi hollow)</li>
-    <li>Guild Burnside</li> 
-    <li>Peavey Omniac (tele style)</li>
-    <li>MIM Fender Tele</li> 
-    <li>Fernandes Strat</li> 
-    <li>Les Paul Studio</li> 
-    <li>MIM Fender Strat</li> 
-    <li>PartsCaster Strat</li> 
-    <li>PartsCaster Offset tele</li> 
-    <li>MIM Modern Player Strat</li> 
-    <li>Schecter 8 String</li> 
-    <li>Danelectro DC</li> 
-    <li>Squier Jagmaster</li> 
-    <li>90s Made in India Squier 2 strat</li> 
-    <li>Glen Burton semi hollow</li> 
-    <li>Fender Marauder</li>
-  </ul>
-  </span>
-</div>
-<div class="grid-element main-1-col">
-  <span id="myDIV5">
-  <h2><center>Bases</center></h2>
-  <ul>
-    <li>Vista Series Squier MusicMaster bass</li> 
-    <li>1970 USA Fender P Bass</li>
-    <li>Danelectro Innuendo (built in chorus)</li>
-    <li>Fender Mike Durnt P Bass</li> 
-    <li>MIM Fender P Bass</li> 
-    <li>Made in India Squier 2 P Bass (emg pickups)</li>
-    <li>MIM Fender Jazz Bass X2</li>
-    <li>90s USA Fender Jazz Bass</li> 
-    <li>1970s Kay Double Bass</li> 
-  </ul>
-  </span>
-</div>
-<div class="grid-element main-1-col">
-  <span id="myDIV6">
-  <h2><center>Synths</center></h2>
-  <ul>
-    <li>Moog SubPhatty</li>
-    <li>Yamaha DX7iiFD</li>
-    <li>Yamaha SK15</li>
-    <li>Casio CZ3000</li>
-    <li>Casio PT-87</li>
-    <li>Casio PT-50</li>
-    <li>Casio MT-820</li>
-    <li>Casio MT-68</li>
-    <li>Korg Minilogue</li>
-    <li>Korg Microkorg</li>
-    <li>Korg Poly 61</li>
-  </ul>
-  </span>
-</div>
-  <div class="grid-element main-1-col">
-    <span id="myDIV7">
-  <h2><center>Cabs</center></h2>
-  <ul>
-    <li>Ovation 4x12 (60s Eminence speakers)</li>
-    <li>Mesa Boogie 2x10 bass cab</li> 
-    <li>Music Man 2x10 bass cab</li> 
-    <li>Sunn Cab 2x12</li> 
-    <li>Supernova 2x12</li>
-  </ul>
-    </span>
-</div>
-<div class="grid-element main">
-  <span id="myDIV8">
-  <h2><center>Mics</center></h2>
-  <ul>
-    <li>Sm58 x2</li>
-    <li>Sm57 x4</li>
-    <li>Shure beta 57</li> 
-    <li>Shure PG48</li>
-    <li>EV 664a</li>
-    <li>EV RE10</li> 
-    <li>EV RE20</li> 
-    <li>EV 635</li> 
-    <li>EV ND 408</li>
-    <li>EV ND 308</li>
-    <li>AKG D1000</li> 
-    <li>AKG D112</li> 
-    <li>Audio Technica AT 2020 X2</li> 
-    <li>Audio Technica AT 4033</li> 
-    <li>Audio Technica Kick/Tom</li>
-    <li>Audio Technica Snare/Tom</li>
-    <li>Warm Audio fet 47jr</li> 
-    <li>Warm Audio 414</li> 
-    <li>Realistic Pencil Condenser</li>
-    <li>Rode NT1A</li> 
-    <li>AIWA DM 51</li>
-    <li>ROSS 7HL X2</li>
-    <li>RCA Tape Machine mic</li> 
-    <li>Sony F-98</li>
-    <li>MXL RL-44 X2</li>
-    <li>SUB Kick</li> 
-    <li>Sennheiser 441</li>
-    <li>Sub kick</li> 
-    <li>Blue Hummingbird x4</li>
-    <li>Realistic 33-919</li>
-  </ul>
-  </span>
-</div>
-  <div class="grid-element main">
-    <span id="myDIV9">
-  <h2><center>Rack Gear</center></h2>
-  <ul>
-    <li>Symetrix compressor limiter</li>
-    <li>T.C electronic C300</li>
-    <li>DBX 266</li>
-    <li>DBX 266XL</li> 
-    <li>Behrienger composer</li>
-    <li>Alesis Micro Limiter</li> 
-    <li>Alesis Micro Parametric EQ</li> 
-    <li>Alesis Midiverb II</li>
-    <li>Alesis MIdiverb III</li> 
-    <li>Alesis Midiverb IV</li>
-    <li>ADA d-250 Delay</li> 
-    <li>Tascam RS-20 Delay</li>
-  </ul>
-    </span>
-</div>
-  <div class="grid-element extra">If you have any questions about our equipment, send us an email at {enter email} </div>
-  <div class="grid-element footer">Footer</div>
-</div>
-	</body>
-
-
-
-<script>
-function myFunction() {
-  var x = document.getElementById("myDIV");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-
-function myFunction2() {
-  var x = document.getElementById("myDIV2");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-} 
-
-function myFunction3() {
-  var x = document.getElementById("myDIV3");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-} 
-
-
-function myFunction4() {
-  var x = document.getElementById("myDIV4");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-
-function myFunction5() {
-  var x = document.getElementById("myDIV5");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-
-function myFunction6() {
-  var x = document.getElementById("myDIV6");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-function myFunction7() {
-  var x = document.getElementById("myDIV7");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-  function myFunction8() {
-  var x = document.getElementById("myDIV8");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-function myFunction9() {
-  var x = document.getElementById("myDIV9");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
+  <div id="div6" class="targetDiv">
+    <h3><center>Synths</center></h3>
+    <nav class = "columns flex-columns">
+       <ul>
+         <li>Moog SubPhatty</li>
+<li>Yamaha DX7iiFD</li>
+<li>Yamaha SK15</li>
+<li>Casio CZ3000</li>
+<li>Casio PT-87</li>
+<li>Casio PT-50</li>
+<li>Casio MT-820</li>
+<li>Casio MT-68</li>
+<li>Korg Minilogue</li>
+<li>Korg Microkorg</li>
+<li>Korg Poly 61</li>
+       </ul>
+     </nav></div>
+   <div id="div7" class="targetDiv">
+     <h3><center>Cabs</center></h3>
+     <nav class = "columns flex-columns">
+       <ul>
+         <li>Ovation 4x12 (60s Eminence speakers)</li>
+<li>Mesa Boogie 2x10 bass cab</li>
+<li>Music Man 2x10 bass cab</li>
+<li>Sunn Cab 2x12</li>
+<li>Supernova 2x12</li>
+       </ul>
+     </nav>
+   </div>
+  <div id="div8" class="targetDiv">
+    <h3><center>Microphones</center></h3>
+    <nav class = "columns flex-columns">
+       <ul>
+         <li>Sm58 x2</li>
+<li>Sm57 x4</li>
+<li>Shure beta 57</li>
+<li>Shure PG48</li>
+<li>EV 664a</li>
+<li>EV RE10</li>
+<li>EV RE20</li>
+<li>EV 635</li>
+<li>EV ND 408</li>
+<li>EV ND 308</li>
+<li>AKG D1000</li>
+<li>AKG D112</li>
+<li>Audio Technica AT 2020 X2</li>
+<li>Audio Technica AT 4033</li>
+<li>Audio Technica Kick/Tom</li>
+<li>Audio Technica Snare/Tom</li>
+<li>Warm Audio fet 47jr</li>
+<li>Warm Audio 414</li>
+<li>Realistic Pencil Condenser</li>
+<li>Rode NT1A</li>
+<li>AIWA DM 51</li>
+<li>ROSS 7HL X2</li>
+<li>RCA Tape Machine mic</li>
+<li>Sony F-98</li>
+<li>MXL RL-44 X2</li>
+<li>SUB Kick</li>
+<li>Sennheiser 441</li>
+<li>Sub kick</li>
+<li>Blue Hummingbird x4</li>
+<li>Realistic 33-919</li>
+       </ul>
+     </nav>
+  </div>
+  <div id="div9" class="targetDiv">
+    <h3><center>Rack Gear</center></h3>
+    <nav class = "columns flex-columns">
+       <ul>
+         <li>Symetrix compressor limiter</li>
+<li>T.C electronic C300</li>
+<li>DBX 266</li>
+<li>DBX 266XL</li>
+<li>Behrienger composer</li>
+<li>Alesis Micro Limiter</li>
+<li>Alesis Micro Parametric EQ</li>
+<li>Alesis Midiverb II</li>
+<li>Alesis MIdiverb III</li>
+<li>Alesis Midiverb IV</li>
+<li>ADA d-250 Delay</li>
+<li>Tascam RS-20 Delay</li>
+       </ul>
+     </nav>
+  </div>
+   <div id="div10" class="targetDiv">
+     <h3><center>Monitors</center></h3>
+     <nav class = "columns flex-columns">
+       <ul>
+         <li>KrK V8</li>
+<li>NS-10s</li>
+<li>PA speakers</li>
+       </ul>
+     </nav>
+   </div>
+  <div id="div11" class="targetDiv">
+    <h3><center>Drums</center></h3>
+    <nav class = "columns flex-columns">
+       <ul>
+         <li>70s Ludwig Jellybean Vistalite Kit (13,14,16,18, 22)</li>
+<li>60s Pearl Kit (13,16,20)</li>
+<li>Gretsch Catalina Kit (12,13,14,16,22)</li>
+<li>70s Ludwig Acrolite Snare 14”</li>
+<li>Pork Pie “Hip Pig” Snare 14”</li>
+<li>Pork Pie “Little Squealer” Snare 13”</li>
+<li>Premier Wood Snare 14”</li>
+<li>Yamaha Steel Snare 14”</li>
+<li>Ludwig Accent Snare 14”</li>
+       </ul>
+     </nav>
+  </div>
+  <div id="div12" class="targetDiv">
+    <h3><center>Symbols</center></h3>
+    <nav class = "columns flex-columns">
+       <ul>
+         <li>15” 70s Zildjian New Beat Hi Hats</li>
+<li>18” 70s Zildjian Crash Ride</li>
+<li>19” 70s Zildjian Crash Ride</li>
+<li>20” 70s Zildjian Ride</li>
+<li>19” Dream Vintage Bliss Crash Ride</li>
+<li>19” Dream Bliss Paper Thin Clash</li>
+<li>20” Dream Vintage Bliss Crash Ride</li>
+<li>20” Dream Bliss Crash Ride</li>
+<li>22” Dream Energy Ride</li>
+<li>14” Zanki Hi Hats</li>
+<li>20” Zilko Ride</li>
+<li>Many Assorted Unmarked Cymbals</li>
+       </ul>
+     </nav>
+  </div>
+</section>
+              
+            </div>
+        </div>
+  </div>
+    </body>
+  </div>
 </body>
 </html>
