--- a/gearlist.html
+++ b/gearlist.html
@@ -50,8 +50,7 @@
    <a  class="showSingle" target="4">Cymbals</a>
 </div>
 <div class = "bubble2">
-  Howdy Y'all! Here is our gear list. We have 2 consoles: Tascam m3700
-and a Tascam m208. our interface is Mackie Firewire Interface 16 I/O (it's great I promise). We also have more pedals than we can count, so they are not listed. Click the buttons above to reveal our other gear!
+  Howdy Y'all! Here is our gear list. Our Console is a Tascam m3700. Our interface is Mackie Firewire Interface 16 I/O (it's great I promise). We also have more pedals than we can count, so they are not listed. Click the buttons above to reveal our other gear!
 </div>
 <section class="cnt">
    <div id="div1"  class="targetDiv">
