--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     </div>
     <p class= "grid-item text">Ah<br><span class = "band">Joetaurone</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/1kDQGdKVJYr50K98Bpk6BG?si=h90ch3ApSgem59hqU-Vamw" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">
     <div id="album3">
@@ -70,7 +70,7 @@
     </div>
     <p class= "grid-item text">Toilet Paper<br><span class = "band">Joetaurone</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://joetaurone.bandcamp.com" class="button grid-item">Listen on Bandcamp</a></div>
   </div>  
   <div class="grid-item">
     <div id="album4">
@@ -85,7 +85,7 @@
     </div>
     <p class= "grid-item text">Loose Ends<br><span class = "band">Cheesy Snacks</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/2KYovPTc5euZupZtX7nM1R?si=8vZcOn7uRxmNvo1Ofc5JEg" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">    
     <div id="album5">
@@ -100,7 +100,7 @@
     </div>
     <p class= "grid-item text">Half Asleep<br><span class = "band">Toriendofstory</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/7nuSpihovTLq9E4RZeDHME?si=Y9_A5g5IScytt3J5oM2cMw" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">
     <div id="album6">
@@ -115,7 +115,7 @@
     </div>
     <p class= "grid-item text">Danjoe<br><span class = "band">Danjoe</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/1idPI3evv4mdPAllpBUsbc?si=4n9r1y1zRaiP8y3bVeJqug" class="button grid-item">Listen on Spotify</a></div>
   </div>  
   <div class="grid-item">
     <div id="album7">
@@ -130,7 +130,7 @@
     </div>
     <p class= "grid-item text">Honesty Hour<br><span class = "band">L i l y </span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/2rW26nYbygKCScDr3r4lqC?si=D3Z8nkHfQBSfF_Cq9W0T1g" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">
     <div id="album8">
@@ -145,7 +145,7 @@
     </div>
     <p class= "grid-item text">Danjoe 2 Flamin' Hot<br><span class = "band">Danjoe</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/2L89vB1HYjfGdx3JgWawPa?si=DYpX3Q9ISjGqyqx1wjtJdw" class="button grid-item">Listen on Spotify</a></div>
   </div>
   <div class="grid-item">
     <div id="album9">
@@ -160,7 +160,7 @@
     </div>
     <p class= "grid-item text">Not Enough<br><span class = "band">Mark Manning</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/0jIyfIsn19h51sSmyc8cLy?si=HFbuXh4jQbi252F0KqNCFQ" class="button grid-item">Listen on Spotify</a></div>
   </div>  
       <div class="grid-item">
     <div id="album10">
@@ -175,7 +175,22 @@
     </div>
     <p class= "grid-item text">What Country Is<br><span class = "band">Sara Pierson</span></p>
     <div>
-      <a href="#" class="button grid-item">Listen on Spotify</a></div>
+      <a href="https://open.spotify.com/album/048iAd4jACbpphYlh8kSPU?highlight=spotify:track:4pENF0VBZSJcRZNZtXdIBu" class="button grid-item">Listen on Spotify</a></div>
+  </div> 
+      <div class="grid-item">
+    <div id="album11">
+      <div id="cover11">
+        <div id="print11">
+        </div>
+      </div>
+        <div id="vinyl11">
+          <div id="print11">
+          </div>
+        </div>
+    </div>
+    <p class= "grid-item text">Quiet Love<br><span class = "band">Canella</span></p>
+    <div>
+      <a href="https://open.spotify.com/album/6XYJzqXh8zldhM06kf8KjT?si=uPiaUmnASQabZYzPUH70ZA" class="button grid-item">Listen on Spotify</a></div>
   </div> 
 </div>
   </div>
